init project structure

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -30,7 +30,33 @@ html,body {
 
   background-color: #ddd;
 }
+.img-figure{
+  position: absolute;
+
+  width: 320px;
+  height: 360px;
+  padding: 40px;
+  margin: 0;
+
+  box-sizing: border-box;
+  background-color: #fff;
+}
+.img-figure img{
+  width: 240px;
+  height: 240px;
+}
+figcaption{
+  text-align: center;
+}
+figcaption .img-title{
+  margin: 20px 0 0 0;
+  color: #a7a0a2;
+  font-size: 16px;
+
+}
 /* img -- end */
+
+
 
 /* controller -- start */
 .controller-nav{
