--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -37,13 +37,18 @@ html,body {
   height: 360px;
   padding: 40px;
   margin: 0;
-
+  cursor: pointer;
   box-sizing: border-box;
   background-color: #fff;
+
+  transform-style: preserve-3d; 
 }
 .img-figure img{
   width: 240px;
   height: 240px;
+}
+.is-inverse{
+  transform: rotateY(180deg);
 }
 figcaption{
   text-align: center;
@@ -52,7 +57,19 @@ figcaption .img-title{
   margin: 20px 0 0 0;
   color: #a7a0a2;
   font-size: 16px;
+}
+figcaption .img-back{
+  position: absolute;
+  left: 0;
+  right: 0;
 
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  padding: 50px 40px;
+  overflow: auto;
+  
+  display: none;
 }
 /* img -- end */
 
