--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -9,13 +9,15 @@ html,body {
   width: 100%;
   height: 100%;
 }
-
+#app{
+  height: 100%;
+}
 /* stage -- start*/
 .stage{
   position: relative;
 
   width: 100%;
-  height: 680px;
+  height: 100%;
 }
 /* stage -- end */
 
@@ -63,15 +65,26 @@ figcaption .img-title{
 figcaption .img-back{
   position: absolute;
   left: 0;
-  right: 0;
+  top: 0;
 
   width: 100%;
   height: 100%;
   box-sizing: border-box;
   padding: 50px 40px;
   overflow: auto;
-  
-  display: none;
+
+  color: #a7a0a2;
+  font-size: 22px;
+  line-height: 1.25;
+  text-align: left;
+
+  background-color: #fff;
+  box-sizing: border-box;
+  transform: rotateY(180deg) translateZ(1px);
+  backface-visibility: hidden;
+}
+figcaption .img-back p{
+  margin: 0;
 }
 /* img -- end */
 
